fix: remove extra margin

--- a/src/components/featured-products-section/featured-products-section.module.scss
+++ b/src/components/featured-products-section/featured-products-section.module.scss
@@ -35,11 +35,6 @@
 }
 
 @media (max-width: $desktop-width) {
-    .root {
-        padding-left: 4%;
-        padding-right: 4%;
-    }
-
     .headerDescription {
         font-size: 16px;
     }
